# 42hackathon

./: .dockerignore  .env.example  .env.ginse.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GOAL.md  LICENSE  README.fr.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml  render.yaml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
deploy/: upstreams.lock.json
docs/: ARCHITECTURE.md  BOOTSTRAP.md  GINSE.md  HACKATHON-PLAN.md  STACK-CANDIDATES.md  TELEPHONY.md
docs/conversation/: 00-INDEX.md  01-vision-et-roadmap.md  02-repos-existants.md  03-regle-documentation.md  04-architecture-locale-open-source.md  05-integration-codex-plugin-mcp.md  06-publication-github.md  07-github-cli-portable.md  08-publication-par-fork.md  09-comprehension-actuelle.md  10-codex-cli-appel-jury.md  11-push-apres-chaque-modification.md  12-recherche-travail-coequipier.md  13-commits-directs-main.md  14-comparaison-pushs.md  15-definition-dialer.md
docs/decisions/: 0001-per-user-self-hosting.md  0002-verified-caller-identity.md  0003-fredo-hackathon-contract.md  (+2 more)
schemas/: ginse-example-input.json  ginse-input.schema.json  ginse-output.schema.json  hosted-phone-example-input.json  hosted-phone-input.schema.json  hosted-phone-output.schema.json
scripts/: bootstrap.sh  clone-upstreams.sh  ginse-init.sh
tests/: test_agent_config.py  test_app.py  test_cli.py  test_configurator.py  test_doctor.py  test_ginse.py  test_plugin.py  test_policy.py  test_registry.py  test_settings.py  test_telephony.py  test_voice_agent.py
voice-clone-poc/: README.md  pyproject.toml  run.ps1  setup.ps1
voice-clone-poc/src/voice_clone_poc/: __init__.py  app.py  config.py  engine.py  validation.py
voice-clone-poc/tests/: test_validation.py
(+18 files in other folders)
