[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "fredo-phone"
version = "0.1.0"
description = "A guarded outbound phone capability for Codex, powered by Deepgram and Twilio."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { file = "LICENSE" }
authors = [{ name = "42hackathon" }]
dependencies = [
  "deepgram-sdk==6.0.0",
  "httpx==0.28.1",
  "PyJWT[crypto]==2.13.0",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.22",
  "starlette==0.52.1",
  "twilio==9.10.2",
  "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=0.25,<2",
  "jsonschema>=4.25,<5",
  "ruff>=0.12,<1",
]

[project.scripts]
fredo = "fredo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fredo"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
