[project]
name = "voice-clone-poc"
version = "0.1.0"
description = "Local French zero-shot voice cloning proof of concept"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "chatterbox-tts @ git+https://github.com/resemble-ai/chatterbox.git@65b18437192794391a0308a8f705b1e33e633948",
  # Avoid librosa's overly old fallback, which cannot build on Python 3.11.
  "numba>=0.61.2,<0.62",
]

[project.scripts]
voice-clone-poc = "voice_clone_poc.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_clone_poc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true
